--- a/symfony/project/.env
+++ b/symfony/project/.env
@@ -29,3 +29,7 @@ APP_SECRET=a1fdf02cc677a6083391d2bfaa0f6289
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 DATABASE_URL="sqlite:///%kernel.project_dir%/var/app.db"
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
