--- a/symfony/project/composer.json
+++ b/symfony/project/composer.json
@@ -13,6 +13,7 @@
         "doctrine/doctrine-migrations-bundle": "^1.2",
         "doctrine/orm": "^2",
         "easycorp/easyadmin-bundle": "^1.17",
+        "lexik/jwt-authentication-bundle": "^2.5",
         "nelmio/cors-bundle": "^2.1",
         "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^6.1",
