--- a/symfony/project/config/packages/security.yaml
+++ b/symfony/project/config/packages/security.yaml
@@ -27,6 +27,7 @@ security:
                 authenticators:
                     #- lexik_jwt_authentication.jwt_token_authenticator
                     - App\Security\TokenAuthenticator # this class creatd by us replaces Lexik\Bundle\JWTAuthenticationBundle\Security\Guard\JWTTokenAuthenticator
+            user_checker: App\Security\UserEnableChecker
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
