--- a/symfony/project/composer.json
+++ b/symfony/project/composer.json
@@ -31,7 +31,8 @@
         "symfony/swiftmailer-bundle": "^3.2",
         "symfony/twig-bundle": "4.4.*",
         "symfony/validator": "4.4.*",
-        "symfony/yaml": "4.4.*"
+        "symfony/yaml": "4.4.*",
+        "vich/uploader-bundle": "^1.8"
     },
     "config": {
         "preferred-install": {
