--- a/symfony/project/config/packages/api_platform.yaml
+++ b/symfony/project/config/packages/api_platform.yaml
@@ -5,3 +5,7 @@ api_platform:
         json: ['application/merge-patch+json']
     swagger:
         versions: [3]
+    # eager_loading:
+    #     enabled: true
+    # collection:
+    #     order_parameter_name: '_order'
