--- a/symfony/project/config/services.yaml
+++ b/symfony/project/config/services.yaml
@@ -37,3 +37,7 @@ services:
         arguments: ['@security.token_storage']
         tags:
             - { name: 'serializer.normalizer', priority: 64 }
+
+    App\Security\UserConfirmationService:
+        arguments:
+            $logger: '@monolog.logger.token_confirmation'
