--- a/symfony/project/config/packages/security.yaml
+++ b/symfony/project/config/packages/security.yaml
@@ -28,10 +28,23 @@ security:
                     #- lexik_jwt_authentication.jwt_token_authenticator
                     - App\Security\TokenAuthenticator # this class creatd by us replaces Lexik\Bundle\JWTAuthenticationBundle\Security\Guard\JWTTokenAuthenticator
             user_checker: App\Security\UserEnableChecker
+        admin:
+            pattern: ^/
+            anonymous: true
+            form_login:
+                check_path: security_login
+                login_path: security_login
+                default_target_path: admin
+                use_referer: true
+            logout:
+                path: security_logout
+
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
         #- { path: ^/api/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin, roles: ROLE_SUPERADMIN }
         - { path: ^/api, roles: IS_AUTHENTICATED_ANONYMOUSLY }
     role_hierarchy:
         ROLE_WRITER: ROLE_COMMENTATOR
