--- a/symfony/project/composer.json
+++ b/symfony/project/composer.json
@@ -70,8 +70,11 @@
         "post-update-cmd": [
             "@auto-scripts"
         ],
-        "tests": [
+        "testunit": [
             "php bin/phpunit tests/"
+        ],
+        "testfunctional": [
+            "./vendor/bin/behat"
         ]
     },
     "conflict": {
@@ -84,6 +87,13 @@
         }
     },
     "require-dev": {
+        "behat/behat": "^3.5",
+        "behat/mink": "^1.7",
+        "behat/mink-browserkit-driver": "^1.3",
+        "behat/mink-extension": "^2.3",
+        "behat/symfony2-extension": "^2.1",
+        "behatch/contexts": "^3.2",
+        "coduo/php-matcher": "^3.1",
         "doctrine/doctrine-fixtures-bundle": "^3.0",
         "fzaninotto/faker": "^1.8",
         "symfony/maker-bundle": "^1.5",
