--- a/symfony/react-js/package.json
+++ b/symfony/react-js/package.json
@@ -18,10 +18,12 @@
     "react-router-redux": "^5.0.0-alpha.6",
     "redux": "^3.6.0",
     "redux-devtools-extension": "^2.13.2",
+    "redux-form": "^7.4.2",
     "redux-logger": "^3.0.1",
     "redux-thunk": "^2.3.0",
     "superagent": "^3.8.2",
-    "superagent-promise": "^1.1.0"
+    "superagent-promise": "^1.1.0",
+    "timeago.js": "^3.0.2"
   },
   "scripts": {
     "start": "cross-env PORT=4100 react-scripts start",
