--- a/symfony/project/config/packages/api_platform.yaml
+++ b/symfony/project/config/packages/api_platform.yaml
@@ -1,21 +1,19 @@
 api_platform:
     mapping:
         paths: ['%kernel.project_dir%/src/Entity']
-    patch_formats:
-        json: ['application/merge-patch+json']
-    swagger:
-        versions: [3]
-    # eager_loading:
-    #     enabled: true
+#    formats:
+#        json:
+#            mime_types: ['application/json']
+    eager_loading:
+        enabled: true
     collection:
-    #     order_parameter_name: '_order'
         pagination:
-    #         enabled: false
-    #         page_parameter_name: _page
-    #         client_enabled: true
-    #         enabled_parameter_name: pagination
+#            enabled: false
+            page_parameter_name: _page
+#            client_enabled: true
+#            enabled_parameter_name: pagination
             items_per_page: 10
-            client_items_per_page: false # Disabled by default
+            client_items_per_page: true # Disabled by default
             items_per_page_parameter_name: itemsPerPage
             maximum_items_per_page: 20
             partial: false
@@ -24,4 +22,3 @@ api_platform:
     exception_to_status:
         App\Exception\EmptyBodyException: 400
         App\Exception\InvalidConfirmationTokenException: 404
-        
