--- a/symfony/project/.env
+++ b/symfony/project/.env
@@ -37,7 +37,7 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###> lexik/jwt-authentication-bundle ###
 JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
 JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
-JWT_PASSPHRASE=1234
+JWT_PASSPHRASE=secret
 ###< lexik/jwt-authentication-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
