--- a/symfony/project/config/packages/vich_uploader.yaml
+++ b/symfony/project/config/packages/vich_uploader.yaml
@@ -2,8 +2,8 @@ vich_uploader:
     db_driver: orm
 
     mappings:
-       images:
-           uri_prefix: /images
-           upload_destination: '%kernel.project_dir%/public/images'
-           # Decide how upload files would be moved
-           namer: Vich\UploaderBundle\Naming\UniqidNamer
+        images:
+            uri_prefix: /images
+            upload_destination: '%kernel.project_dir%/public/images'
+            # Decide how uploaded files would be renamed
+            namer: Vich\UploaderBundle\Naming\UniqidNamer
